Fixed spacing and flex issues on cards

--- a/finalProject/src/app/app.component.css
+++ b/finalProject/src/app/app.component.css
@@ -4,10 +4,11 @@
 
 .navBar {
   border-radius: 6px;
- 
+ /* display: flex; */
   /* background-color: #CBFF4C; */
   background-color: #C7FF20;
-  height:50px
+  height:50px;
+  overflow: auto;
   /* background-color: #71BBF5; */
   /* background-color:#FFB716; */
   /* background-color: #FFD942; */
