--- a/finalProject/src/app/components/home/home.component.css
+++ b/finalProject/src/app/components/home/home.component.css
@@ -14,7 +14,7 @@
     margin-top: -50px;
 } */
 
-.textContainer{
+.textContainer {
     /* position:relative; */
     /* top:40%; */
 }
@@ -28,26 +28,26 @@
     top: 40%;
 
     margin: auto;
-    left:0;
+    left: 0;
 
-    bottom:40%;
+    bottom: 40%;
 
-    right:0;
+    right: 0;
 
     z-index: 100;
 
     /* width: 100%;
 
     /* top: 40%; */
-  /* left: 0;
+    /* left: 0;
   bottom: 40%;
   right: 0;  */
 
-  /* -ms-transform: translate(-50%, -50%);
+    /* -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); */
 
     /* margin-top: 500px; */
-    
+
 }
 
 
@@ -56,7 +56,7 @@
     /* position:absolute; */
 
     /* margin-top:100px; */
-    
+
     /* top:3em;
     bottom: 3em;
     left:0;
@@ -72,20 +72,20 @@
     margin-bottom: 3vh;
 }
 
-h3{
+h3 {
     /* position:absolute; */
     /* top:0; */
     /* bottom:0;
     left:0;
     right:0; */
     font-family: 'Outfit', sans-serif;
-    font-size:35px;
+    font-size: 35px;
     color: white;
     border: solid;
     border-color: white;
     border-radius: 6px;
     padding: auto;
-    margin:auto;
+    margin: auto;
     text-align: center;
     padding-top: 10px;
     /* width: 170px; */
@@ -95,9 +95,9 @@ h3{
     cursor: pointer;
 }
 
-.joinNow:hover{
+.joinNow:hover {
     color: #C7FF20;
-    border-color:#C7FF20;
+    border-color: #C7FF20;
     cursor: pointer;
 }
 
@@ -139,36 +139,51 @@ h3{
 .containerOne {
     display: flex;
     justify-content: space-evenly;
+    margin: auto;
+    height: 100vh;
     /* flex-wrap: wrap; */
 
     /* min-height: 100px;
     min-width: 50px; */
 
-    width: 100%;
-
+    /* width: 100%; */
+    position: relative;
     /* overflow: overlay; */
+
+
+    flex-direction: row;
+    /* position: relative; */
+    /* flex-direction: column; */
+    /* width: 100%; */
+    /* margin: auto; */
+    align-items: center;
+
 }
 
 
 .card {
-    display: flex;
+    /* display: flex; */
     /* flex-shrink: 5; */
     /* flex-direction: column; */
     /* padding-left: 50px; */
-    height: 700px;
-    width: 500px;
+    height: 70vh;
+    width: 28vw;
+
+    /* height: 700px;
+    width: 500px; */
+
     background-image: url('/assets/Images/joseph-gonzalez-fdlZBWIP0aM-unsplash.jpg');
     background-size: cover;
     /* margin-left: 100px; */
-    margin-top: 150px;
+    margin-top: 130px;
     /* max-width: 100%;
     max-height: 100%; */
 
     /* min-width: 400px;
     min-height: 270px; */
-    
+
     /* margin-top: 250px; */
-   
+
     overflow: hidden;
     border-radius: 8px;
 }
@@ -178,45 +193,62 @@ h3{
     /* display: flex; */
     font-size: 30px;
     /* max-width: 600px; */
-    width: 550px;
+    /* width: 50%; */
+
     margin: auto;
     color: black;
     line-height: 1.5;
-    padding-top: 250px;
-    margin-left: 100px;
+    /* padding-top: 50px; */
+    /* margin-left: 100px; */
 }
 
+.nutritionText {
+    width: 50%;
+}
 
 /* Beginning of Banner Four Styling */
 
 .bannerFour {
+    /* display: flex; */
+    /* position: relative; */
     height: 100vh;
     width: 100%;
     /* background-color: #CBFF4C; */
     background-color: #C7FF20;
     min-height: 100vh;
-   
+
+
 }
 
 .containerTwo {
+    /* position: absolute; */
     display: flex;
+
     justify-content: space-evenly;
 
+    margin: auto;
+    height: 100vh;
     /* flex-wrap: wrap-reverse; */
-
+    position: relative;
+    flex-direction: row;
+    align-content: center;
     /* overflow: auto;*/
 }
 
 .cardTwo {
     /* display: flex; */
     /* flex-direction: column; */
-    height: 700px;
+    height: 70vh;
+    width: 28vw;
+
+    /* height: 700px;
     width: 500px;
     min-height: 600px;
-    min-width: 400px;
+    min-width: 400px; */
+
     /* max-width: 500px;
     max-height: 700px; */
-    margin-top: 150px;
+    margin-top: 130px;
     overflow: hidden;
     border-radius: 8px;
 }
@@ -244,8 +276,8 @@ h3{
     /* display: flex; */
     font-size: 30px;
     /* max-width: 600px; */
-    
-    width: 550px;
+
+    /* width: 50%; */
 
     /* width: 50vw; */
 
@@ -253,9 +285,13 @@ h3{
     color: black;
     line-height: 1.5;
     padding-top: 250px;
+
     /* margin-left: 0px; */
 }
 
+.workoutText {
+    width: 50%;
+}
 
 /* Beginning of Banner Five Styling */
 
@@ -268,7 +304,7 @@ h3{
     /* margin-bottom: 100px; */
 }
 
-.carouselHeading{
+.carouselHeading {
     /* position: static; */
     /* display: flex; */
     text-align: center;
@@ -280,5 +316,3 @@ h3{
     font-size: 90px;
     /* line-height: 1.5; */
 }
-
-
